Arquivos da aula 08.05

--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CatFacts</title>
+    <title>Tudo sobre gatos</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="imagens/cat_favicon.png" type="image/x-icon">
 </head>
 <body>
-    <h1>Fatos Aleatorios Sobre Gatos!</h1>
+    <h1>Fatos e Fotos Aleatorios Sobre Gatos!</h1>
     <p id="fatos"></p>
+    <img src="" alt="" id="foto">
     <button id="btn_pegar_fatos">Descobrir</button>
 
     <script src="script.js"></script>
