alterações da aula 09.05

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
     <h1>Fatos e Fotos Aleatorios Sobre Gatos!</h1>
     <p id="fatos"></p>
+    <p class="fatos_caracteres"></p>
     <img src="" alt="" id="foto">
+    <p class="foto_tamanho"></p>
     <button id="btn_pegar_fatos">Descobrir</button>
 
     <script src="script.js"></script>
